--- a/user_signup/templates/user_signup/view_blog_post.html
+++ b/user_signup/templates/user_signup/view_blog_post.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ post.title }}</title>
+    <style>
+        .img {
+            max-width: 100%;
+            height: auto;
+            max-height: 200px;
+        }
+    </style>
 </head>
 <body>
     <h1>{{ post.title }}</h1>
